<resources>
    <string name="app_name">Birds We See</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_sightings">Sightings</string>
    <string name="title_settings">Settings</string>
    <string name="map_dashboard">Map Dashboard</string>
    <string name="get_directions_to_hotspot">Get Directions to Hotspot</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="common_name">Common Name</string>
    <string name="location">Location</string>
    <string name="date_seen">Date Seen</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="email_or_username">Email or Username</string>
    <string name="login">Login</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_user_locations">User Locations</string>
    <string name="collection_user_settings">User Settings</string>
    <string name="collection_user_sightings">User Sightings</string>

    <string name="app_logo">App logo</string>
    <string name="create_my_sighting">Create My Sighting</string>
    <string name="unit_of_measurement">Unit of Measurement</string>
    <string name="search_radius">Search Radius</string>
    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="save_changes">Save Changes</string>
    <string name="nav_register">Go to Registration</string>
    <string name="hotspots">Hotspots</string>
    <string name="captured_image">Captured Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="bird_species">Bird Name</string>
    <string name="title_capture">Capture Sightings</string>
    <string name="save_sighting">Save Sighting</string>
    <string name="google_maps_api_key">AIzaSyDvAMW0zSS3HZmyX0aXSca7pEZOjIgdJ50</string>
    <string name="sighting_name">Sighting Name</string>
    <string name="my_sighting">My Sightings</string>
    <string name="capture_sighting">Capture sighting</string>
    <string name="take_photo">Take Photo</string>
</resources>