<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textUnitMeasurement"
        android:text="@string/unit_of_measurement"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:padding="15dp"
        android:textAlignment="center"
        android:textSize="24sp" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:background="@drawable/text_input">

    <RadioButton android:id="@+id/radio_km"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="16dp"
        android:text="@string/kilometers"
        android:textSize="18sp"
        android:textColor="@color/green"
        />

    <RadioButton
        android:id="@+id/radio_miles"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="16dp"
        android:text="@string/miles"
        android:textSize="18sp"
        android:textColor="@color/green"/>
    </RadioGroup>
    <TextView
        android:id="@+id/textRadiusLabel"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:padding="15dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:labelFor="@id/textRadius"
        android:text="@string/search_radius" />
    <EditText
        android:id="@+id/textRadius"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="16dp"

        android:background="@drawable/text_input"

        android:inputType="number"
        android:padding="15dp"
        android:textColor="@color/green"

        android:textSize="18sp"
        android:autofillHints="250" />

    <Button
        android:id="@+id/saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/save_changes" />


</LinearLayout>