<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"

    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:padding="30dp"
    tools:context="com.example.bws.ui.Register">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/username"
        android:background="@drawable/text_input"
        android:padding="15dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/email"
        android:background="@drawable/text_input"
        android:padding="15dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/text_input"
        android:padding="15dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:textSize="24sp"/>



    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"

        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:background="@drawable/text_input"
        android:padding="15dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:textSize="24sp"/>

    <Button
        android:textColor="@color/black"
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"
      android:layout_margin="50dp"
        android:textSize="20sp"
        android:text="@string/register" />
</LinearLayout>