<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
   android:padding="35dp"
    android:orientation="vertical"

    tools:context="com.example.bws.ui.Login">



    <EditText
        android:id="@+id/editTextEmailL"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/email"
        android:background="@drawable/text_input"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="65dp"

        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/text_input"
        android:padding="15dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:textSize="24sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/login" />

    <!-- ProgressBar for loading animation -->
    <Button
        android:id="@+id/buttonGoRegistration"
        android:layout_width="wrap_content"
        android:layout_height="50dp"

        android:layout_gravity="center|bottom"
        android:layout_marginTop="50dp"
        android:background="@drawable/text_input"
        android:text="@string/nav_register"
        android:textColor="@color/black" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:visibility="gone" />

</LinearLayout>